# agent-toolkit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
agent_toolkit/: __init__.py  cli.py
agent_toolkit/core/: __init__.py
agent_toolkit/pipeline/: __init__.py  acceptance.py  clarify.py  dispatch.py  execute.py  intake.py  prompt_optimizer.py  prune_check.py  refine.py  router.py  runner.py
agent_toolkit/skills/acceptance/: SKILL.md
agent_toolkit/skills/clarify/: SKILL.md
agent_toolkit/skills/dispatch/: SKILL.md
agent_toolkit/skills/execute/: SKILL.md
agent_toolkit/skills/intake/: SKILL.md
agent_toolkit/skills/memory-manager/: SKILL.md
agent_toolkit/skills/prune-check/: SKILL.md
agent_toolkit/skills/refine/: SKILL.md
agent_toolkit/skills/workflow-orchestrator/: SKILL.md
core/: config.py
memory/logs/: 2026-07-18.md
pipeline/: acceptance.py  clarify.py  dispatch.py  execute.py  prompt_optimizer.py  refine.py  router.py  runner.py
scripts/: start_headroom.bat  start_headroom.sh
skills/headroom/: SKILL.md
skills/prompt-optimizer/: SKILL.md
skills/router/: SKILL.md
tests/: conftest.py  test_apis.py  test_intake.py  test_prune_check.py  test_router.py  test_runner.py
