[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-toolkit"
version = "0.1.0"
description = "一条从「用户原话」到「可验收代码」的七阶段 Agent 管线"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mousewww"}
]
keywords = ["agent", "llm", "pipeline", "automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
atk = "agent_toolkit.cli:main"
agent-toolkit = "agent_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/mousewww/agent-toolkit"
Repository = "https://github.com/mousewww/agent-toolkit"
Issues = "https://github.com/mousewww/agent-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_toolkit"]

[tool.hatch.build.targets.sdist]
include = [
    "/agent_toolkit",
    "/README.md",
    "/LICENSE",
    "/AGENTS.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
